fix: code styling for dark mode

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -112,10 +112,10 @@
   }
 
   .content pre {
-    @apply mb-8 text-base bg-neutral-50 dark:bg-neutral-800 p-4 whitespace-pre-wrap border border-neutral-200 rounded-md;
+    @apply mb-8 text-base bg-neutral-50 dark:bg-neutral-800 p-4 whitespace-pre-wrap border border-neutral-200 dark:border-neutral-700 rounded-md text-neutral-900 dark:text-white;
   }
 
   .content p code {
-    @apply text-base bg-neutral-50 dark:bg-neutral-800 px-2 py-1 border border-neutral-200 rounded-md text-neutral-900;
+    @apply text-base bg-neutral-50 dark:bg-neutral-800 px-2 py-1 border border-neutral-200 dark:border-neutral-700 rounded-md text-neutral-900 dark:text-white;
   }
 }
